# EPW2

./: .gitignore  README.md  adding_to_the_database.md  epw.py  pyproject.toml  requirements.txt
database/: abandonware.json  acorn_archimedes.json  acorn_bbc_micro.json  acorn_electron.json  amiga_cd.json  amiga_cd32.json  amstrad_cpc.json  apple_ii.json  atari_2600.json  atari_5200.json  atari_7800.json  atari_8bit_family.json  atari_jaguar.json  atari_lynx.json  bandai_playdia.json  bandai_wonderswan.json  bandai_wonderswan_color.json  capcom_play_system_1.json  capcom_play_system_2.json  capcom_play_system_3.json  commodore_64_preservation_project.json  commodore_64_tapes.json  complete_rom_sets.json  dreamcast.json  game_boy.json  game_boy_advance.json  game_boy_color.json  gamecube.json  mame.json  missing_entries_links.txt  neo_geo.json  neo_geo_pocket_neo_geo_pocket_color_ngpx.json  nintendo_64.json  nintendo_ds.json  nintendo_entertainment_system.json  nintendo_famicom_disk_system.json  nokia_ngage.json  panasonic_3do_3do_interactive_multiplayer.json  pc_engine_cd_turbo_duo_turbografx_cd.json  pc_engine_turbografx16.json  (+21 more)
src/: database.py  downloader.py  extractor.py  matching.py  settings.py  utils.py
